# deliverant

./: .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  entrypoint.sh  manage.py  pyproject.toml
apps/api/: authentication.py  prefixed_ids.py  urls.py
apps/api/serializers/: deliveries.py  endpoints.py  (+2 more)
apps/attempts/: models.py
apps/deliveries/: apps.py  models.py  state_machine.py
apps/endpoints/: admin.py  apps.py  models.py
apps/events/: models.py
apps/replays/: apps.py  models.py
apps/tenants/: admin.py  models.py
dashboard/: .env.example  package-lock.json  package.json  proxy.ts
dashboard/app/: globals.css  layout.tsx
dashboard/components/: AttemptTimeline.tsx  Breadcrumbs.tsx  CommandPalette.tsx  CountdownTimer.tsx  DeliveryStatusBadge.tsx  EmptyState.tsx  MetricsCard.tsx  Sidebar.tsx  Skeleton.tsx
dashboard/lib/: api.ts  constants.ts  oauth.ts  session.ts  types.ts
deliverant/: asgi.py  celery.py  exceptions.py  settings.py  urls.py  wsgi.py
deliverant/settings/: base.py  development.py  production.py
docs/: api-reference.md  deployment.md
tests/: conftest.py  factories.py
tests/e2e/: test_delivery_flow.py
tests/integration/: test_api_analytics.py  test_api_deliveries.py  test_api_endpoints.py  test_api_events.py  test_api_kill_switch.py  test_api_replays.py  test_api_tenant.py  test_oauth.py  test_workers.py
tests/unit/: test_kill_switch.py  test_response_classification.py  test_signature.py  test_state_machine.py
workers/: delivery.py  kill_switch.py  lease.py  metrics.py  scheduler.py
(+63 files in other folders)
